# ceramic-kiln-controller-showcase

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ceramique/: __main__.py
ceramique/config/: config_manager.py  hardware_config.yaml
ceramique/controllers/: kiln_controller.py  pid_controller.py  sensor_manager.py  triac_controller.py
ceramique/core/: event_dispatcher.py
ceramique/logging/: data_logger.py
ceramique/monitors/: system_monitor.py
ceramique/processors/: temperature_approximator.py
ceramique/profiles/: profile_manager.py  temperature_curves.py
ceramique/profiles/curves/: bisquit.json  bisquit_express.json  drying.json  earthenware.json  glazing.json  glazing_express.json  glazing_perfect.json  pit_fire.json  porcelain.json  raku.json  saggar.json  smoke.json  stoneware.json
ceramique/sensors/: __init__.py  hx711.py  max31855.py  pzem004t.py  sht31.py
ceramique/sensors/stubs/: hx711_stub.py  spidev_stub.py
ceramique/ui/: kiln_gui.py  temperature_plot.py
ceramique/ui/components/: base_frame.py  profile_selector.py  technical_params.py  temperature_params.py  time_info.py
scripts/: monitor_cpu_temp.sh  run.sh  sync.sh
tests/: test_max31855.py  test_pid_controller.py  test_pzem004t.py
